new update, bottom navigation

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HO",
+    "name": "Hospital-Online",
     "slug": "HO",
     "version": "1.0.0",
     "orientation": "portrait",
