--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
@@ -21,10 +23,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.3.2"
   },
